# facebook-group-notion-property-logger

./: .env.example  .gitignore  AGENTS.md  CODEX.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: daily-sync.yml
data/: sample_posts.csv  sample_posts.json
docs/: architecture.md  ci-activation.md  ci-workflow.yml  quality-gates.md  review-packet.md  setup.md
scripts/: quality_gate.sh
src/fb_notion_property_logger/: __init__.py  cli.py  config.py  facebook_api.py  models.py  notion.py  parsers.py  source.py  state.py
tests/: test_cli.py  test_facebook_api.py  test_notion_blocks.py  test_parsers.py  test_source.py  test_state.py
