[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fb-notion-property-logger"
version = "0.1.0"
description = "Append authorized property post data to a single Notion page."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "GitHub-GPT Developer" }]
dependencies = [
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.8.0",
]

[project.scripts]
fb-notion-property-logger = "fb_notion_property_logger.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
